--- a/UnityAI/Packages/com.megumin.ai.behaviortree/Note/技术难点.md
+++ b/UnityAI/Packages/com.megumin.ai.behaviortree/Note/技术难点.md
@@ -40,3 +40,10 @@ protected virtual Status GetIgnoreResult(BTNode from)
     }
 }
 ```
+
+## Undo/Redo
+Q：撤销和重做是非常复杂的部分，添加节点，批量修改等。
+A：使用SerializedObject，ScriptObject Wrap 一层。
+抽象UndoBeginScope，解决一个操作包含很多更改操作的问题。
+
+
