--- a/UnityAI/Packages/com.megumin.ai.behaviortree/Note/技术细节.md
+++ b/UnityAI/Packages/com.megumin.ai.behaviortree/Note/技术细节.md
@@ -1,19 +1,5 @@
-# BehaviorTree
+# 技术细节
 
-# 介绍
-## Summary
-为AAA和独立游戏设计的行为树插件。可以快速创建复杂的AI。
-
-## Description
-- 符合人类直觉的行为树架构，更加易于学习。  
-  增加装饰器设计。条件装饰器使行为树用户界面更直观、更易读。  
-- 非常易于扩展，仅需几行代码就可以自定义节点和UI样式。 
-- 完整的子树支持，编辑器支持多个窗口，可以同时编辑和Debug父树和子树。 
-- 解决了许多传统行为树的使用痛点，值得不满足于传统行为树的用户尝试。  
-
-[ [Samples](https://github.com/KumoKyaku/Megumin.GameFramework.AI.Samples) | [Feedback](https://github.com/KumoKyaku/Megumin.GameFramework.AI.Samples/issues) | [Wiki](https://github.com/KumoKyaku/Megumin.GameFramework.AI.Samples/wiki/BehaviorTree) | [QQ Group]() | [Discord](https://discord.gg/6VZbxZgTRU) ]
-
-## Technical details
 - 使用UIElement构建的编辑器。
 - 完整的C#代码，所有代码都是可见的，没有dll。
 - 针对接口设计的架构，完全与业务逻辑解耦，更好的扩展性。
@@ -22,9 +8,7 @@
 - 清晰的代码架构，完全模块化代码。
 - 灵活的参数绑定，允许手动修改绑定路径。
 
----
----
-# 依赖
+## 依赖
 - "com.unity.settings-manager": "1.0.3"
 
 1. 在Unity中打开Window -> Package Manager。
@@ -32,7 +16,6 @@
 3. 输入UPM包的名字，版本可选填。
 4. 点击“Add”按钮，等待Unity下载和安装UPM包。
 
-# 快速入门
 ## 基础功能
 
 * [x] 基础节点库实现
@@ -81,54 +64,6 @@
 - [ ] 远程调试
 - [ ] 游戏内实时编辑器/行为树查看器。（目前GraphView只支持编辑器，等unity realtime支持时迁移）
 
-## 支持的Attribute
-- [x] Category
-- [x] DisplayName
-- [x] Icon
-- [x] HelpURL
-- [x] Description
-- [x] Tooltip
-- [x] Color
-- [x] SerializationAlias
-
-## 参数设置
-实例化参数 InitOption：  
-- AsyncInit  
-  使用多线程异步实例化行为树。  
-  缺点是不会在当前帧立刻完成并执行行为树。  
-  并且初始化过程不能调用unity方法。  
-- SharedMeta  
-  同一个行为树文件创建的实例，共享meta信息，主要是节点描述，节点坐标等运行时无关信息。  
-- LazyInitSubtree
-  延迟实例化子树，推迟到子树节点运行时实例化。  
-  默认是false。
-- UseGenerateCode  
-  使用生成的代码实例化行为树。
-+ DelayRandomFrame  
-  实例化之后，开始执行树之前，延迟随机帧数。  
-  当同时实例化大量行为树时，并设置了执行间隔时，可以将实例分散到多个帧执行，用来防止尖峰帧卡顿。  
-
-如果主行为树使用多线程初始化，那么应该同时初始化子树，因为不会阻塞主线程。  
-如果主行为树使用Unity主线程初始化，那么应该延迟初始化子树，尽量不要让大量计算发生在同一帧。  
-
-运行参数 RunOption：  
-+ FrameInterval  
-  执行的帧间隔  
-+ TimeInterval  
-  执行的游戏时间间隔  
-+ RealtimeInterval  
-  执行的实时时间间隔  
-- Log  
-  打印节点切换等关键位置日志
-- Order  
-  预留
-- OnSucceeded  
-  当行为树执行成功时应该做出的操作，要不要重启整个树。
-- OnFailed  
-  当行为树执行失败时应该做出的操作，要不要重启整个树。
-
----
----
 # 架构细节
 
 ## 架构图
@@ -245,19 +180,6 @@ ResetFlag --> Return
   由于架构设计原因，无法分析参数表与节点的引用关系，引用的参数表参数不会跟随导出到新树中。  
 
 `注意：内联和导出都是高危操作，非常容易对行为树文件造成不可逆更改。强烈建议在操作前使用版本管理工具。`
-
-## 平行节点Parallel
-根据FinishMode有不同的行为
-- AnyFailed  
-  任意一个子节点失败，返回失败。
-- AnySucceeded  
-  任意一个子节点成功，返回成功。
-- AnyCompleted  
-  任意一个子节点完成，返回完成节点的结果。
-- AnySucceededWaitAll  
-  等待所有子节点都完成，任意一个子节点成功，返回成功。
-- AnyFailedWaitAll  
-  等待所有子节点都完成，任意一个子节点失败，返回失败。
 
 ## 多态序列化和泛型序列化
 
@@ -470,3 +392,6 @@ Event和Trigger都是记录在树中的标记。
 ---
 # 参考连接
 - https://robohub.org/introduction-to-behavior-trees/
+
+
+
