--- a/UnityAI/Packages/com.megumin.ai.behaviortree/Note/编辑器架构.md
+++ b/UnityAI/Packages/com.megumin.ai.behaviortree/Note/编辑器架构.md
@@ -5,14 +5,16 @@
 
 优点：  
 - 未保存更改不会影响文件本身
-- 不同的文件版本不会影响编辑器
+- 不同的序列化格式版本不会影响编辑器，方便修复bug升级
 - 调试时可以实时修改树实例本身，不需要重载
 - 每个实例可以独立编辑器窗口，同时调试多个实例树，子树  
 - 即使没有file文件，也可以一定程度调试行为树。为了应对生成代码的树进行调试。  
+- 即使没有file文件，也可以远程调试（开发中）  
 
 缺点：  
 - 复制粘贴需要额外序列化步骤
 - 子树合并和拆分不方便
+- 树实例需要包含meta数据，造成运行时额外开销
 
 ## 基本单元
 - 以树做为基本单元
@@ -20,3 +22,6 @@
 
 # UI框架
 使用UIElment
+
+
+
