增加Awake Start调用点

--- a/UnityAI/Packages/com.megumin.ai.behaviortree/Note/技术难点.md
+++ b/UnityAI/Packages/com.megumin.ai.behaviortree/Note/技术难点.md
@@ -46,4 +46,95 @@ Q：撤销和重做是非常复杂的部分，添加节点，批量修改等。
 A：使用SerializedObject，ScriptObject Wrap 一层。
 抽象UndoBeginScope，解决一个操作包含很多更改操作的问题。
 
+## Debug/Log
+Q：打印日志和优化性能非常冲突的两个部分，[字符串内插](https://learn.microsoft.com/dotnet/csharp/programming-guide/strings/#string-interpolation)会分配大量内存。日志方法调用又不应该太繁琐，用户使用时尽量少写代码。  
+直接使用Debug.Log打印日志，每次都会生成大量无用字符串。  
+A：最基本的解决思路是，在打印日志前做判断，如果不满足条件就不要生成日志字符串。  
+目前的设计是，在基类声明一个GetLogger方法，并使用空传播。  
+如果不满足条件，GetLogger返回null，后面的字符串生成不会被调用。
+```cs
+public virtual TraceListener GetLogger(string key = null)
+{
+    if (RunOption?.Log == true)
+    {
+        return TraceListener;
+    }
+
+    return null;
+}
+
+private void Enter(object options = null)
+{
+    GetLogger(LogConst.ChangeNode)?.WriteLine($"[{Time.time:0.00}] Enter Node {this}");
+    OnEnter(options);
+}  
+```
+这样设计的好处是，可以将Log开关放在GetLogger方法内检测，所有Log开关都可以放在一个地方调用。  
+
+后续设计还可以根据需求变形：  
+- GetLogger的Key可以是泛型，也可以重载GetLogger方法。方便使用枚举作为LogKey。  
+- GetLogger的返回值可以变为一个接口，根据key的不同或者运行环境的不同，返回不同的Logger，例如控制台Logger或者写入文件Logger，甚至可以返回一个StringBuilder，性能可以极大提高。  
+
+## 调用点设计 Awake，Start 等  
+Q：设计过多的调用点，用户使用起来更加灵活，但是也引入了复杂性。  
+大多数调用点可能永远不会调用，但是每次执行都要执行大量的空函数。  
+A：目前设计是调用点接口化，并缓存到一个集合中。这个设计不算好，但可以缓解一些问题。
+
+
+## 调用点函数签名设计  
+```cs
+public interface IAwakeable
+{
+    /// <summary>
+    /// 绑定之后，解析之后，第一次Tick开始时调用
+    /// </summary>
+    /// <param name="options"></param>
+    void Awake(object options = null);
+}
+```
+
+调用点通常含有一个object默认为空的可选参数，这是一个预留参数。  
+目前可以想到的用途是，以后非常有可能将计时器，从整个行为树系统中抽象分离出去。参数调用过程中可能需要从外部传递计时器进来。  
+以后也非常可能为每个调用点设计一个Context类型，并且子类根据Context实现的接口做特殊处理。  
+
+
+```cs
+/// <summary>
+/// 轮询
+/// </summary>
+/// <param name="from">当前调用的父节点</param>
+/// <param name="options">预留设计，用于传递可能的Context上下文等参数</param>
+/// <returns></returns>
+/// <remarks>
+/// 使用参数获得父节点，而不是从节点连接关系取得父节点。
+/// 如果行为树文件拓扑结构允许菱形或者环形，可能有多个父节点。
+/// 但是运行时同一时刻只可能有一个调用父节点。
+/// </remarks>
+public Status Tick(BTNode from, object options = null)
+{
+
+}
+```
+
+轮询调用点方法，暂时没有接口化，因为还没有考虑的太全面，留到使用一段时间后，看看有没有合适的重构时机。  
+
+轮询方法签名，与其他行为树设计最大的区别就是，将调用这个节点的节点传递进来。当前节点可以根据上个节点执行不同逻辑，返回不同的返回值，GetIgnoreResult就依赖于此实现。  
+有利有弊，这样设计又与状态机有些相似，牺牲了行为树的纯粹性，可能会造成误用。  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
