--- a/UnityAI/Packages/com.megumin.ai.behaviortree/Note/技术细节.md
+++ b/UnityAI/Packages/com.megumin.ai.behaviortree/Note/技术细节.md
@@ -141,6 +141,17 @@ AbortSelf --> ResetFlag
 ResetFlag --> Return
 ```
 
+## 初始化
+
+```mermaid
+graph LR
+BindAgent --> ParseBinding ---> |FirstTick| Awake --> Start
+```
+
+BindAgent,ParseBinding 在 Awake前执行。  
+BindAgent,ParseBinding被看作反序列化的一部分，Awake可能会用到一些序列化的成员，至少会用到GameObject。  
+
+
 ## 装饰器
 
 本库采用的设计是，装饰器放在Task内部，并认为装饰器是Task的一部分。  
