--- a/UnityAI/Packages/com.megumin.ai.behaviortree/Note/技术难点.md
+++ b/UnityAI/Packages/com.megumin.ai.behaviortree/Note/技术难点.md
@@ -16,7 +16,7 @@ A: 建立全局查找表。
 
 Q：没有正确反序列化的节点，如果忽略，作为Selector的子节点应该返回失败，
 作为Sequence的子节点应该返回成功。  
-A: 在节点调用过程中增加from函数，节点知道他的运行时是通过哪个节点进入的。
+A: 在节点调用过程中增加from参数，节点知道他的运行时是通过哪个节点进入的。
 不能查找自己的父节点，可能存在菱形链接，含有多个父节点。只能运行时传入。  
 当节点Enabled == false，会调用此函数的GetIgnoreResult，动态返回结果。  
 注意：当反序列化失败时，节点会被missnode替代，调用missnode的GetIgnoreResult函数，而不是当前节点的函数。
@@ -74,6 +74,24 @@ private void Enter(object options = null)
 后续设计还可以根据需求变形：  
 - GetLogger的Key可以是泛型，也可以重载GetLogger方法。方便使用枚举作为LogKey。  
 - GetLogger的返回值可以变为一个接口，根据key的不同或者运行环境的不同，返回不同的Logger，例如控制台Logger或者写入文件Logger，甚至可以返回一个StringBuilder，性能可以极大提高。  
+
+Q：有时节点参数不合法，需要在编辑器界面体现出来，而且用户自定义的节点同样需要此功能。例如权重随机节点，权重参数个数与子节点数不一致；跟随节点没有跟随对象等。  
+A：通过IDataValidable接口实现。编辑器会判断节点是否实现了这个接口，并在合适时机调用。根据返回值在编辑器中提示，或者打印警告。  
+
+```cs
+/// <summary>
+/// 可验证节点数据的
+/// </summary>
+public interface IDataValidable
+{
+    /// <summary>
+    /// 用于验证节点数据的合法性，当参数不合法时，编辑器UI上增加提示。
+    /// <para/> 通常0表示数据合法
+    /// </summary>
+    /// <returns></returns>
+    (int Result, string ToolTip) Valid();
+}
+```
 
 ## 调用点设计 Awake，Start 等  
 Q：设计过多的调用点，用户使用起来更加灵活，但是也引入了复杂性。  
