--- a/UnityAI/Packages/com.megumin.ai.behaviortree/Note/技术难点.md
+++ b/UnityAI/Packages/com.megumin.ai.behaviortree/Note/技术难点.md
@@ -139,7 +139,8 @@ public Status Tick(BTNode from, object options = null)
 轮询方法签名，与其他行为树设计最大的区别就是，将调用这个节点的节点传递进来。当前节点可以根据上个节点执行不同逻辑，返回不同的返回值，GetIgnoreResult就依赖于此实现。  
 有利有弊，这样设计又与状态机有些相似，牺牲了行为树的纯粹性，可能会造成误用。  
 
-
+## 跨平台问题
+不同平台对API支持不一样，遇到了WebGL不持支Task问题。  
 
 
 
