修复WebGL异步初始化bug

--- a/UnityAI/Packages/com.megumin.ai.behaviortree/Note/技术难点.md
+++ b/UnityAI/Packages/com.megumin.ai.behaviortree/Note/技术难点.md
@@ -141,6 +141,7 @@ public Status Tick(BTNode from, object options = null)
 
 ## 跨平台问题
 不同平台对API支持不一样，遇到了WebGL不持支Task问题。  
+目前WebGL强制使用同步模式。等到Unity2023的Awaitable在测试重构。  
 
 
 
