更新流程图

--- a/UnityAI/Packages/com.megumin.ai.behaviortree/Note/技术细节.md
+++ b/UnityAI/Packages/com.megumin.ai.behaviortree/Note/技术细节.md
@@ -91,7 +91,7 @@ Tick函数内部大致调用过程，具体细节请阅读源码。
 ```mermaid
 graph TB
 
-subgraph Return [Returen State]
+subgraph Return [Return State]
 direction TB
     rs(Succeeded)
     rf(Failed)
@@ -119,8 +119,10 @@ end
 
 subgraph Running
 direction TB
-    Enter/OnEnter --> OnTick(((OnTick)))
-    OnTick --> |IsCompleted| Exit/OnExit
+    enter("(FirstRun)Enter/OnEnter") ---> |Running| OnTick(((OnTick)))
+    OnTick ---> |IsCompleted| Exit/OnExit
+    OnTick ----> |Running| rr(Return State Running)
+    enter --> |IsCompleted| Exit/OnExit
 end
 
 subgraph AbortSelf
