--- a/UnityAI/Packages/com.megumin.ai.behaviortree/Note/技术细节.md
+++ b/UnityAI/Packages/com.megumin.ai.behaviortree/Note/技术细节.md
@@ -51,7 +51,7 @@
 - [x] 保存为ScriptObject文件
 - [ ] 保存为Json文件
 - [x] 自动使用编辑器打开文件
-- [ ] 生成行为树代码，消除反射，消除绑定
+- [x] 生成行为树代码，消除反射，消除绑定
 - [ ] 扫描所有行为树用到的类型，生成TypeCache.Hot静态方法代码。
 
 + [x] 保存编辑器用户偏好设置
