--- a/UnityAI/Packages/com.megumin.ai.behaviortree/Note/技术难点.md
+++ b/UnityAI/Packages/com.megumin.ai.behaviortree/Note/技术难点.md
@@ -145,6 +145,12 @@ public Status Tick(BTNode from, object options = null)
 
 
 
+## 技术支持
+既然上架商店，就必然要提供技术支持，回应用户反馈。  
+英语不好沟通上有很多不便。用户描述问题不清楚也很难提供好的帮助。  
+文档写的也不是足够详细。  
+这些都是脏活累活，有不得不做。  
+
 
 
 
