--- a/UnityAI/Packages/com.megumin.ai.behaviortree/Note/优化.md
+++ b/UnityAI/Packages/com.megumin.ai.behaviortree/Note/优化.md
@@ -31,32 +31,49 @@ end
 - 反射调用  
   目前反序列化是基于反射实现的，所以卡顿的主要原因是反射调用。  
 - 轮询更新树
+- 数据结构Resize
 
 ## 核心API
-- TypeCache.CacheAllTypes  
+- TypeCache.CacheAllTypes (100ms~500ms)  
   缓存AppDomain所有程序集所有类型全名，用于加速后续反序列化时类型查找。  
-- TypeCache.TryMakeArrayType / TypeCache.TryMakeGenericType  
+- TypeCache.TryMakeArrayType / TypeCache.TryMakeGenericType (1ms~20ms)  
   生成泛型特化类型，这些类型再程序集里不存在，只有运行时才存在。  
-- CreateDelegate  
-  将字段属性方法封装为委托。  
-- Activator.CreateInstance  
-  反射创建实例对象。  
-- TrySetMemberValue  
+- Activator.CreateInstance (1ms~20ms)  
+  反射创建实例对象。大量节点对象，RefVar对象等。  
+  内部触发了RuntimeType.CreateInstanceMono，第一次反射调用构造函数需要大量时间。  
+- TrySetMemberValue (10ms~100ms)  
   反射为对象成员赋值。  
+  需要反射访问所有成员，内部触发了RuntimeType.GetMembers，找到对应的成员并反射赋值。第一次特别耗时。  
+  - FieldInfo.SetValue  
+  - PropertyInfo.SetValue
+- CreateDelegate (1ms~20ms)  
+  将字段属性方法封装为委托。主要封装Get Set。  
+- Attribute.GetCustomAttribute (1ms~20ms)  
+  内部触发RuntimeType.GetCustomAttributes。每个成员第一次反射调用需要大量时间。  
+
+
 
 ## 为什么出现尖峰帧卡顿(lag spike)
 在.NET中，反射第一次调用时很慢，第二次就足够快了。所以第一次初始化比较慢是预期之中的。
 
-第一次初始化过程中，会有很多反射调用被触发。  
+在Mono后端和编辑器中，Profiler中，第一次反射调用显示为Mono.JIT，汇总显示总消耗在200ms~500ms，也就是说第一次调用反射的额外开销在200ms以上。  
+这些开销在IL2CPP中也是存在的，显示为xxSlow，xxMono，这一类的方法。  
+这些是可以通过预调用优化的。  
+
+Tick环节，RefVar implicit 第一次隐式转换，Get，Set，也会触发Mono.JIT。  
+
 在插件的架构设计中，不能要求用户在使用之前，必须要执行若干初始化代码。  
-在使用上必须是开箱即用的，保证艺术家和独立开发者可以在不修改代码的情况下工作。
+使用方法必须是开箱即用的，保证艺术家和独立开发者可以在不修改代码的情况下工作。  
+整个架构设计就是延迟初始化的，也是为了防止不必要的额外调用。  
+所以第一次实例化过程中，会有很多很多反射调用被触发，造成尖峰帧卡顿。  
 
 ## 需要处理的位置
 
 - 全局第一次实例化
 - 树实例第一次实例化
 - 节点类型第一次实例化
-- 更新行为树
+- 树实例第一次Tick
+- 树实例Tick
 
 ## 优化思路
 - 优化代码架构和实现方法，减小性能开销  
@@ -65,7 +82,8 @@ end
 
 具体方法：
 - 提前访问静态类型，触发静态成员初始化。例如TypeHelper。 
-  
+- UnityTraceListener构造耗时严重，考虑池化。  
+- 实例化后下一帧在加入Manager，实例化和第一次Tick尽量不要再同一帧执行。  
 
 
 
