--- a/UnityAI/Packages/com.megumin.ai.behaviortree/Note/优化.md
+++ b/UnityAI/Packages/com.megumin.ai.behaviortree/Note/优化.md
@@ -12,7 +12,7 @@ bindAgent--> parse("ParseAllBinding")
 parse--> addTo("Add To Manager")
 addTo--> tick("Tick Tree")
 
-onDisable("Runner Disable") -----> remove("Remove From Manager")
+onDisable("Runner OnDisable") -----> remove("Remove From Manager")
 
 subgraph Instantiate
 direction TB
@@ -32,6 +32,7 @@ end
   目前反序列化是基于反射实现的，所以卡顿的主要原因是反射调用。  
 - 轮询更新树
 - 数据结构Resize
+- Log节点开销很大 (1ms~100ms)  
 
 ## 核心API
 - TypeCache.CacheAllTypes (100ms~500ms)  
@@ -51,10 +52,29 @@ end
 - Attribute.GetCustomAttribute (1ms~20ms)  
   内部触发RuntimeType.GetCustomAttributes。每个成员第一次反射调用需要大量时间。  
 
+## 性能分析器标记
+Profiler.BeginSample 使用 [Conditional("ENABLE_PROFILER")]，可以任性的随意添加到代码中。    
 
+Unity.Profiling.ProfilerMarker 没有 Conditional 特性，建议性能敏感区域，使用条件编译调用。  
+
+```cs
+protected static readonly Unity.Profiling.ProfilerMarker ProfilerMarker = new("MyMarker");
+
+public void Test()
+{
+
+#if ENABLE_PROFILER || UNITY_EDITOR || DEVELOPMENT_BUILD
+    using var profiler = ProfilerMarker.Auto();
+#endif
+
+}
+```
 
 ## 为什么出现尖峰帧卡顿(lag spike)
 在.NET中，反射第一次调用时很慢，第二次就足够快了。所以第一次初始化比较慢是预期之中的。
+
+[Mono.JIT
+Mono-only	Contains samples that relate to just-in-time compilation of a scripting method. When a function is executed for the first time, Mono compiles it and Mono.JIT represents this compilation overhead.](https://docs.unity3d.com/Manual/profiler-markers.html)
 
 在Mono后端和编辑器中，Profiler中，第一次反射调用显示为Mono.JIT，汇总显示总消耗在200ms~500ms，也就是说第一次调用反射的额外开销在200ms以上。  
 这些开销在IL2CPP中也是存在的，显示为xxSlow，xxMono，这一类的方法。  
@@ -77,7 +97,7 @@ Tick环节，RefVar implicit 第一次隐式转换，Get，Set，也会触发Mon
 
 ## 优化思路
 - 优化代码架构和实现方法，减小性能开销  
-- 将耗时大的执行过程分散到多个帧执行（预热和分帧）  
+- 将耗时大的执行过程分散到多个帧执行（预热warm up 和 分帧）  
 - 多线程  
 
 具体方法：
@@ -90,5 +110,6 @@ Tick环节，RefVar implicit 第一次隐式转换，Get，Set，也会触发Mon
 
 # 参考链接
 - [Why is reflection slow?](https://mattwarren.org/2016/12/14/Why-is-Reflection-slow/)
+- [Warm-up when calling methods in C#](https://stackoverflow.com/questions/4446203/warm-up-when-calling-methods-in-c-sharp)
 
 
