增加技术笔记

--- a/UnityAI/Packages/com.megumin.ai.behaviortree/Note/技术难点.md
+++ b/UnityAI/Packages/com.megumin.ai.behaviortree/Note/技术难点.md
@@ -46,6 +46,12 @@ Q：撤销和重做是非常复杂的部分，添加节点，批量修改等。
 A：使用SerializedObject，ScriptObject Wrap 一层。
 抽象UndoBeginScope，解决一个操作包含很多更改操作的问题。
 
+## 健壮性
+为了保证稳定运行，需要写大量的条件判断，和意外情况处理逻辑。  
+这些代码枯燥又无聊，还需要特别小心，非常容易笔误。然后就是漫长的Debug环节。  
+常常为了一个小的问题，要写一大堆代码，还要与性能做取舍。  
+在这些代码上花费的时间远远多于架构设计和核心代码。  
+
 ## Debug/Log
 Q：打印日志和优化性能非常冲突的两个部分，[字符串内插](https://learn.microsoft.com/dotnet/csharp/programming-guide/strings/#string-interpolation)会分配大量内存。日志方法调用又不应该太繁琐，用户使用时尽量少写代码。  
 直接使用Debug.Log打印日志，每次都会生成大量无用字符串。  
@@ -143,7 +149,22 @@ public Status Tick(BTNode from, object options = null)
 不同平台对API支持不一样，遇到了WebGL不持支Task问题。  
 目前WebGL强制使用同步模式。等到Unity2023的Awaitable在测试重构。  
 
+## 优化
+理论设计和优化设计完全是两回事。  
 
+最开始的实现代码都是理想状态，等投入工程实践中，有各种各样的性能问题。  
+内存开销过大，同时运行实例的最大数量，尖峰帧卡顿等。  
+
+需要漫长的性能分析，调整架构，实现方式。在各种地方创建缓存。  
+这又会引入新的BUG，循环往复，最后变成屎山。  
+还要保证注释清晰，因为优化后的代码可能已经不容易理解。  
+
+## 迭代重构
+不同于仅自己使用的代码或者内部项目代码，拥有公开发布流程的代码，迭代重构特别困难。  
+很多功能甚至要兼容多个版本，复杂低效又臃肿。  
+只能建议用户升级到最新版本，但是永远无法强迫用户使用某个版本。  
+在技术支持周期内，很多本可以优化的地方就不能随意改动，甚至重命名都是一个艰巨的任务。  
+许多API原本可以设计为Public，为了保守安全起见渐渐倾向于设计为private。  
 
 ## 技术支持
 既然上架商店，就必然要提供技术支持，回应用户反馈。  
