增加优化笔记

--- a/UnityAI/Packages/com.megumin.ai.behaviortree/Note/优化.md
+++ b/UnityAI/Packages/com.megumin.ai.behaviortree/Note/优化.md
@@ -70,6 +70,12 @@ public void Test()
 }
 ```
 
+# 哪些疑点并没有导致性能问题
+经过调查和测试，以下猜测并没有造成性能损失。  
+- 内部函数
+  怀疑ObjectData.TryDeserialize.TryDeserializeMember内部函数会导致大量的`Mono.JIT`。  
+
+
 ## 为什么出现尖峰帧卡顿(lag spike)
 在.NET中，反射第一次调用时很慢，第二次就足够快了。所以第一次初始化比较慢是预期之中的。
 
