--- a/UnityAI/Packages/com.megumin.ai.behaviortree/Note/优化.md
+++ b/UnityAI/Packages/com.megumin.ai.behaviortree/Note/优化.md
@@ -33,6 +33,7 @@ end
 - 轮询更新树
 - 数据结构Resize
 - Log节点开销很大 (1ms~100ms)  
+- 行为树编辑器Debug模式窗口，建议查看性能时关闭行为树编辑器。  
 
 ## 核心API
 - TypeCache.CacheAllTypes (100ms~500ms)  
@@ -72,9 +73,10 @@ public void Test()
 
 # 哪些疑点并没有导致性能问题
 经过调查和测试，以下猜测并没有造成性能损失。  
-- 内部函数
+- 内部函数  
   怀疑ObjectData.TryDeserialize.TryDeserializeMember内部函数会导致大量的`Mono.JIT`。  
-
+- 程序第一次运行  
+  程序第一次运行会额外触发代码优化吗？结论不会，多次运行开销一致。  
 
 ## 为什么出现尖峰帧卡顿(lag spike)
 在.NET中，反射第一次调用时很慢，第二次就足够快了。所以第一次初始化比较慢是预期之中的。
