--- a/UnityAI/Packages/com.megumin.ai.behaviortree/Note/优化.md
+++ b/UnityAI/Packages/com.megumin.ai.behaviortree/Note/优化.md
@@ -45,13 +45,15 @@ end
   内部触发了RuntimeType.CreateInstanceMono，第一次反射调用构造函数需要大量时间。  
 - TrySetMemberValue (10ms~100ms)  
   反射为对象成员赋值。  
-  需要反射访问所有成员，内部触发了RuntimeType.GetMembers，找到对应的成员并反射赋值。第一次特别耗时。  
+  需要反射访问所有成员，内部触发了RuntimeType.GetMembers，找到对应的成员并反射赋值。Mono似乎没有缓存结果，后续调用也特别耗时。  
+  - Type.GetMembers(1ms~20ms)  
   - FieldInfo.SetValue  
   - PropertyInfo.SetValue
 - CreateDelegate (1ms~20ms)  
   将字段属性方法封装为委托。主要封装Get Set。  
 - Attribute.GetCustomAttribute (1ms~20ms)  
-  内部触发RuntimeType.GetCustomAttributes。每个成员第一次反射调用需要大量时间。  
+  内部触发RuntimeType.GetCustomAttributes。每个成员第一次反射调用需要大量时间。Mono似乎没有缓存结果，后续调用也特别耗时。  
+
 
 ## 性能分析器标记
 Profiler.BeginSample 使用 [Conditional("ENABLE_PROFILER")]，可以任性的随意添加到代码中。    
@@ -108,12 +110,13 @@ Tick环节，RefVar implicit 第一次隐式转换，Get，Set，也会触发Mon
 - 将耗时大的执行过程分散到多个帧执行（预热warm up 和 分帧）  
 - 多线程  
 
-具体方法：
+## 优化实现
 - 提前访问静态类型，触发静态成员初始化。例如TypeHelper。 
 - UnityTraceListener构造耗时严重，考虑池化。  
 - 实例化后下一帧在加入Manager，实例化和第一次Tick尽量不要再同一帧执行。  
+- 为高频调用反射函数创建缓存。  
 
-
+注意：创建缓存是以增大内存为代价的，而且可能会因为缓存过时，引入bug。  
 
 
 # 参考链接
