--- a/UnityAI/Packages/com.megumin.ai.behaviortree/Note/优化.md
+++ b/UnityAI/Packages/com.megumin.ai.behaviortree/Note/优化.md
@@ -110,11 +110,27 @@ Tick环节，RefVar implicit 第一次隐式转换，Get，Set，也会触发Mon
 - 将耗时大的执行过程分散到多个帧执行（预热warm up 和 分帧）  
 - 多线程  
 
+## 预期目标
+第一次初始化耗时小于30ms。  
+后续初始化耗时小于10ms。  
+
 ## 优化实现
 - 提前访问静态类型，触发静态成员初始化。例如TypeHelper。 
-- UnityTraceListener构造耗时严重，考虑池化。  
+- TODO: UnityTraceListener构造耗时严重，考虑池化。  
 - 实例化后下一帧在加入Manager，实例化和第一次Tick尽量不要再同一帧执行。  
 - 为高频调用反射函数创建缓存。  
+
+在项目中，已经内置了大量预热代码。  
+可以在合适的位置调用PreventLagSpike.WarmUpAll。   
+也可以打开RuntimeInitializeOnLoadMethod特性，这样程序启动时自动预热。  
+使用多线程预热更合适，但是无法确定预热完成时间。  
+
+参照PreventLagSpike作为示例，用户可以自行预热自定义类型。  
+也可以有选择的调用各个预热子函数。  
+
+目前PreventLagSpike.WarmUpAll大约耗时1000ms~1500ms。
+预热不是越多越好，需要根据项目具体分析。  
+TrySetMemberValue.cs有许多注释掉的性能分析器标记，根据需求打开使用。  
 
 注意：创建缓存是以增大内存为代价的，而且可能会因为缓存过时，引入bug。  
 
