优化初步完成

--- a/UnityAI/Packages/com.megumin.ai.behaviortree/Note/优化.md
+++ b/UnityAI/Packages/com.megumin.ai.behaviortree/Note/优化.md
@@ -1,5 +1,7 @@
 # 优化
 这篇文档讨论如何处理尖峰帧卡顿(lag spike)。  
+![PreventLagSpike](./BehaviorTree_Document/PreventLagSpike.png)  
+![AsyncInit](./BehaviorTree_Document/AsyncInit.png)
 
 ## 实例的执行过程
 
@@ -111,7 +113,7 @@ Tick环节，RefVar implicit 第一次隐式转换，Get，Set，也会触发Mon
 - 多线程  
 
 ## 预期目标
-第一次初始化耗时小于30ms。  
+第一次初始化耗时小于20ms。  
 后续初始化耗时小于10ms。  
 
 ## 优化实现
@@ -122,14 +124,23 @@ Tick环节，RefVar implicit 第一次隐式转换，Get，Set，也会触发Mon
 
 在项目中，已经内置了大量预热代码。  
 可以在合适的位置调用PreventLagSpike.WarmUpAll。   
-也可以打开RuntimeInitializeOnLoadMethod特性，这样程序启动时自动预热。  
+**`也可以打开RuntimeInitializeOnLoadMethod特性，这样程序启动时自动预热。`**  
 使用多线程预热更合适，但是无法确定预热完成时间。  
+
+同时建议打开异步初始化，对消除尖峰帧卡顿非常有帮助。
+- AsyncInit
+- BeforeBindAgentDelayFrame
+- BeforeParseBindingDelayFrame
+- DelayMinFrame
+副作用时行为树不会再当前帧立刻开始执行。  
+
 
 参照PreventLagSpike作为示例，用户可以自行预热自定义类型。  
 也可以有选择的调用各个预热子函数。  
 
 目前PreventLagSpike.WarmUpAll大约耗时1000ms~1500ms。
 预热不是越多越好，需要根据项目具体分析。  
+所以预热代码默认是关闭的，由用户根据需求开启。  
 TrySetMemberValue.cs有许多注释掉的性能分析器标记，根据需求打开使用。  
 
 注意：创建缓存是以增大内存为代价的，而且可能会因为缓存过时，引入bug。  
