修复流程图map关键字 导致不能渲染bug

--- a/UnityAI/Packages/com.megumin.ai.behaviortree/Note/优化.md
+++ b/UnityAI/Packages/com.megumin.ai.behaviortree/Note/优化.md
@@ -6,7 +6,15 @@
 ## 实例的执行过程
 
 ```mermaid
-graph TD
+graph TB
+
+subgraph Instantiate
+direction TB
+    tc("TypeCache.CacheAllTypes")
+    tc --> create("TryCreateInstance Obj")
+    create --> setmember("Obj Set Member")
+    setmember --> InitAddTreeRefObj
+end
 
 onenable("Runner OnEnable") --> Instantiate
 Instantiate --> bindAgent("BindAgent")
@@ -15,15 +23,6 @@ parse--> addTo("Add To Manager")
 addTo--> tick("Tick Tree")
 
 onDisable("Runner OnDisable") -----> remove("Remove From Manager")
-
-subgraph Instantiate
-direction TB
-    tc("TypeCache.CacheAllTypes")
-    tc --> create("TryCreateInstance Obj")
-    create --> map("Obj Set Member")
-    map --> InitAddTreeRefObj
-end
-
 ```
 
 
