修改优化文档

--- a/UnityAI/Packages/com.megumin.ai.behaviortree/Note/优化.md
+++ b/UnityAI/Packages/com.megumin.ai.behaviortree/Note/优化.md
@@ -40,7 +40,7 @@ onDisable("Runner OnDisable") -----> remove("Remove From Manager")
 - TypeCache.CacheAllTypes (100ms~500ms)  
   缓存AppDomain所有程序集所有类型全名，用于加速后续反序列化时类型查找。  
 - TypeCache.TryMakeArrayType / TypeCache.TryMakeGenericType (1ms~20ms)  
-  生成泛型特化类型，这些类型再程序集里不存在，只有运行时才存在。  
+  生成泛型特化类型，这些类型在程序集里不存在，只有运行时才存在。  
 - Activator.CreateInstance (1ms~20ms)  
   反射创建实例对象。大量节点对象，RefVar对象等。  
   内部触发了RuntimeType.CreateInstanceMono，第一次反射调用构造函数需要大量时间。  
@@ -79,7 +79,7 @@ public void Test()
 - 内部函数  
   怀疑ObjectData.TryDeserialize.TryDeserializeMember内部函数会导致大量的`Mono.JIT`。  
 - 程序第一次运行  
-  程序第一次运行会额外触发代码优化吗？结论不会，多次运行开销一致。  
+  程序第一次运行会额外触发代码优化吗？结论不会，多次运行性能一致。  
 
 ## 为什么出现尖峰帧卡顿(lag spike)
 在.NET中，反射第一次调用时很慢，第二次就足够快了。所以第一次初始化比较慢是预期之中的。
@@ -101,7 +101,7 @@ Tick环节，RefVar implicit 第一次隐式转换，Get，Set，也会触发Mon
 ## 需要处理的位置
 
 - 全局第一次实例化
-- 树实例第一次实例化
+- 树文件第一次实例化为树实例
 - 节点类型第一次实例化
 - 树实例第一次Tick
 - 树实例Tick
@@ -130,8 +130,9 @@ Tick环节，RefVar implicit 第一次隐式转换，Get，Set，也会触发Mon
 - AsyncInit
 - BeforeBindAgentDelayFrame
 - BeforeParseBindingDelayFrame
-- DelayMinFrame
-副作用时行为树不会再当前帧立刻开始执行。  
+- DelayMinFrame  
+
+副作用是行为树不会再当前帧立刻开始执行。  
 
 
 参照PreventLagSpike作为示例，用户可以自行预热自定义类型。  
@@ -141,6 +142,9 @@ Tick环节，RefVar implicit 第一次隐式转换，Get，Set，也会触发Mon
 预热不是越多越好，需要根据项目具体分析。  
 所以预热代码默认是关闭的，由用户根据需求开启。  
 TrySetMemberValue.cs有许多注释掉的性能分析器标记，根据需求打开使用。  
+
+在合适的位置，例如Loading时，后台或者多线程为每个树文件预先实例化一次，这种方法也是可行的。  
+
 
 注意：创建缓存是以增大内存为代价的，而且可能会因为缓存过时，引入bug。  
 
