优化预热代码

--- a/UnityAI/Packages/com.megumin.ai.behaviortree/Note/优化.md
+++ b/UnityAI/Packages/com.megumin.ai.behaviortree/Note/优化.md
@@ -139,8 +139,18 @@ Tick环节，RefVar implicit 第一次隐式转换，Get，Set，也会触发Mon
 也可以有选择的调用各个预热子函数。  
 
 目前PreventLagSpike.WarmUpAll大约耗时1000ms~1500ms。
+- 在PC Intel(R) Core(TM) i9-10850K CPU @ 3.60GHz   3.60 GHz  大约耗费 1000ms+
+- 在Android Redmi Note 12 Turbo 第二代骁龙7+ 八核2.91GHz
+  - IL2CPP 3000ms+ 
+  - Mono 6000ms+
+- 在Nokia N1 
+  - IL2CPP 50000ms+ 
+  - Mono 测试场景没有成功运行。
+
 预热不是越多越好，需要根据项目具体分析。  
-所以预热代码默认是关闭的，由用户根据需求开启。  
+所以预热代码默认是关闭的，由用户根据需求开启。 
+强烈建议使用多线程预热，使用多线程预热更合适，但是无法确定预热完成时间。   
+
 TrySetMemberValue.cs有许多注释掉的性能分析器标记，根据需求打开使用。  
 
 在合适的位置，例如Loading时，后台或者多线程为每个树文件预先实例化一次，这种方法也是可行的。  
