--- a/UnityAI/Packages/com.megumin.ai.behaviortree/Note/优化.md
+++ b/UnityAI/Packages/com.megumin.ai.behaviortree/Note/优化.md
@@ -162,5 +162,8 @@ TrySetMemberValue.cs有许多注释掉的性能分析器标记，根据需求打
 # 参考链接
 - [Why is reflection slow?](https://mattwarren.org/2016/12/14/Why-is-Reflection-slow/)
 - [Warm-up when calling methods in C#](https://stackoverflow.com/questions/4446203/warm-up-when-calling-methods-in-c-sharp)
+- [Playing with your member](http://marcgravell.blogspot.com/2012/01/playing-with-your-member.html)
+- [Marc Gravell / fast-member](https://github.com/mgravell/fast-member)
+
 
 
