--- a/UnityAI/Packages/com.megumin.ai.behaviortree/Note/技术细节.md
+++ b/UnityAI/Packages/com.megumin.ai.behaviortree/Note/技术细节.md
@@ -8,6 +8,33 @@
 - 清晰的代码架构，完全模块化代码。
 - 灵活的参数绑定，允许手动修改绑定路径。
 
+## 解决了其他行为树的哪些痛点？
+- 绑定问题
+  - 其他行为树只能绑定到已有组件上
+  - 而我的实现，支持更复杂的绑定，即使组件不存在。
+  - 可以绑定到字段属性，方法等。
+  - 可以绑定到接口。这样做的好处时，如果想要做mod，公开AI部分。不需要公开Agent代码，仅公开Agent支持的接口就可以了。
+- 不需要SetValue
+  - 基于轮询驱动的，条件节点会自己去访问绑定的值。在Agent侧，不需要频繁的SetValue来触发行为树。
+  - 所以也去掉了黑板，Agent和行为树不在需要中间层。
+- 泛型节点（目前仅运行时支持）
+  - 不需要创建大量重复或者相似节点。
+    例如MoveTo，Follow，Patrol，三个节点都是移动相关。
+    参数可以是Vector3，也可以是GameObject，或者transform。
+    Agent移动方式可以是NavAgent,也可以是CharatorControllor。
+    排列组合会有大量节点产生。泛型节点可以解决这个问题。
+- 节点自适应
+  - 开发调试，甚至版本变更时，可能会临时关闭某些节点，或者节点失效。节点自适应，可以在修改行为树连线的情况下，忽略特定节点，就想这个节点不存在一样。
+- 任意节点都可以作为开始节点。
+  - 其他的行为树可能有专门的开始节点。
+  - 这样做的的优点的，调试时可以只应用一个行为树的局部分支。非常有用。
+- Goto
+  - 允许节点直接访问其他节点。
+  - 有利有弊的一个功能。带来了灵活性。
+  - 可以不用，但是不能没有的功能。
+- 子树
+  更好的解决逻辑复用问题
+
 ## 依赖
 - "com.unity.settings-manager": "1.0.3"
 
